	* Ported calls for random number generation to Win32 in
	'sy/sysadv_server.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed regressions resulting from adding Win32 port.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Modernized the AM_INIT() and AC_INIT() macro invocation in
	'configure.ac'.
	* Added the AC_CONFIG_MACRO_DIR([m4]) macro in 'configure.ac'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed regressions resulting from adding Win32 port.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Ported 'SyMcastSocket::subscribe()' and
	'SyMcastSocket::unsubscribe()' methods to Win32 in
	'sy/symcastsocket.cpp'.
	* Ported 'SyRouting::subscribe()' and 'SyRouting::unsubscribe()'
	methods to Win32 in 'sy/syrouting.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Implemented 'SySyslog()' to output messages to stderr on Win32
	in 'sy/sysyslog.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Ported the 'SyRouting::LoadInterfaces()' method to Win32 in
	'sy/syrouting.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyRouting::socketErrorString()' method in
	'sy/syrouting.cpp' and 'sy/syrouting.h'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Ported the 'SyRouting::load()' and SyRouting::save()' methods to
	Win32 in 'sy/syrouting.cpp'.
2014-09-29 Fred Gleason <fredg@paravelsystems.com>
	* Addded SWITCHYARD_SETTINGS_ORGANIZATION and
	SWITCHYARD_SETTINGS_APPLICATION defines in 'sy/syconfig.h'.
	* Ported source database generation to Win32 in 'sy/syadv_server.cpp'
	* Ported source database reading to Win32 in 'sy/syadv_reader.cpp'
2015-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/syrouting.cpp' that broke saving of destination
	information to the routing database.
	* Changed SYD_SLOTS in 'tests/syd.h' to '4'.
2015-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Added 'FASM' tag to set of recognized tags when parsing 'SRC'
	commands in 'sy/sylwrp_server.cpp'.