@@ -54,6 +54,7 @@ ldconfig
 
 %files
 %defattr(-,root,root,-)
+%{_sbindir}/syd
 %{_libdir}/libSwitchyard.so
 %{_libdir}/libSwitchyard.so.@INTERFACE_MAJOR@
 %{_libdir}/libSwitchyard.so.@INTERFACE_MAJOR@.@INTERFACE_MINOR@.@INTERFACE_POINT@
@@ -69,6 +70,8 @@ ldconfig
 %{_libdir}/libSwitchyard.la
 
 %changelog
+* Wed Jan 28 2015 Fred Gleason <fredg@paravelsystems.com>
+-- Added syd(8).
 * Mon Aug  4 2014 Fred Gleason <fredg@paravelsystems.com>
 -- Added a BuildRoot: directive.
 * Fri Aug  1 2014 Fred Gleason <fredg@paravelsystems.com>
